# ibs-db-analysis

./: .gitignore  pyproject.toml
src/db_config/: mysql_config.py  psql_config.py
src/notebooks/ibs-cards-mysql/: ibs-ibscards-db.ipynb
src/settings/: main_settings.py
